# phoneCtrl

./: .gitignore  README.md
docs/: architecture.md
laptop/: CMakeLists.txt
laptop/src/: main.cpp
laptop/src/capture/: screen_capture.cpp  screen_capture.h
laptop/src/encoder/: video_encoder.cpp  video_encoder.h
laptop/src/input/: input_handler.cpp  input_handler.h
laptop/src/network/: websocket_server.cpp  websocket_server.h
phone/: pubspec.yaml
phone/lib/: main.dart
phone/lib/screens/: remote_desktop_screen.dart
phone/lib/services/: input_service.dart  webrtc_service.dart
phone/lib/widgets/: touch_overlay.dart
signaling/: package.json  server.js
